--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
 
      <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700" rel="stylesheet">
 
+     <!-- contact form -->
+     <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
+     <script src="./js/contactForm.js" defer></script>
+
 </head>
 
 <body data-spy="scroll" data-target=".navbar-collapse" data-offset="50">
@@ -52,7 +56,7 @@
                          <li><a href="#home" class="smoothScroll">Home</a></li>
                          <li><a href="#about" class="smoothScroll">About Me</a></li>
                          <li><a href="#experience" class="smoothScroll">Experiences</a></li>
-                         <li><a href="#quotes" class="smoothScroll">Testimonial</a></li>
+                         <li><a href="#quotes" class="smoothScroll">Download CV</a></li>
                          <li><a href="#contact" class="smoothScroll">Contact</a></li>
                     </ul>
                </div>
@@ -431,10 +435,6 @@
                          </div>
                     </div>
 
-                    <!-- <div class="col-md-3 col-sm-6">
-                         <div class="background-image contact-img"></div>
-                    </div> -->
-
                     <div class="bg-dark col-md-3 col-sm-6">
                          <div class="contact-thumb">
                               <div class="wow fadeInUp contact-info" data-wow-delay="0.6s">
@@ -472,10 +472,12 @@
                               </p>
                          </div>
                          <ul class="wow fadeInUp social-icon" data-wow-delay="2s">
-                              <li><a href="https://web.facebook.com/tebogo.tebsa.794" class="fa fa-facebook" target="_blank"></a></li>
+                              <li><a href="https://web.facebook.com/tebogo.tebsa.794" class="fa fa-facebook"
+                                        target="_blank"></a></li>
                               <li><a href="https://x.com/tshepomosh31" class="fa fa-twitter" target="_blank"></a></li>
                               <li><a href="https://github.com/tmoshole" class="fa fa-github" target="_blank"></a></li>
-                              <li><a href="https://www.linkedin.com/in/tshepo-matome-moshole-3393921ba" class="fa fa-linkedin" target="_blank"></a></li>
+                              <li><a href="https://www.linkedin.com/in/tshepo-matome-moshole-3393921ba"
+                                        class="fa fa-linkedin" target="_blank"></a></li>
                          </ul>
                     </div>
 
