--- a/index.html
+++ b/index.html
@@ -386,11 +386,11 @@
                <div class="row">
 
                     <div class="col-md-offset-1 col-md-10 col-sm-12">
-                         <i class="wow fadeInUp fa fa-star" data-wow-delay="0.6s"></i>
-                         <h2 class="wow fadeInUp" data-wow-delay="0.8s">Proin lobortis eu diam et facilisis. Fusce nisi
-                              nibh, molestie in vestibulum quis, auctor et orci.</h2>
-                         <p class="wow fadeInUp" data-wow-delay="1s">Curabitur at pulvinar ante. Duis dui urna, faucibus
-                              eget felis eu, iaculis congue sem.</p>
+                         <h2 class="wow fadeInUp" data-wow-delay="0.8s">Click below to download my CV</h2>
+                         <a  href="./documents/TshepoMoshole.pdf" target="_blank">
+                              <i class="wow fadeInUp fa fa-download" data-wow-delay="0.6s"></i>
+                              
+                         </a>
                     </div>
 
                </div>
